# Mini-Projects-and-Practice

AI-DJ/: index.html  main.js  style.css
AI-ping-pong/: index.html  main.js
AI_imaging/: app.py  configure_yolo.py  data.yaml  detect_greencrab.py  detections.csv  how_to_use.txt  refined_detection.py  requirements.txt  simple_detection.py  testing_label_file_data.py  train.py
Avengers/: index.html  style.css
BAPS-Website/: app-a89b2a183fe14aa356cb.css  file(1).enc  file(10).enc  file(11).enc  file(12).enc  file(13).enc  file(2).enc  file(3).enc  file(4).enc  file(5).enc  file(6).enc  file(7).enc  file(8).enc  file(9).enc  file.enc  index.html  lazy_loaded_high_priority_components.fcc7780c59f8ce24e224.css  lazy_loaded_low_priority_components.55663bf221bd05dd5e55.css  main.cb713928153eb505a605.css
Bookstraps_and_code.org/: index.html  style.css
C105/: C103  index.html  main.js  style.css
C107/: index.html  main.js  style.css
C112/: index.html  main.js  style.css
CC-MATE/: README.md  controller.js  index.js  motors.js  package-lock.json  package.json  update.sh  video.js
COT20000125-repo/: Lab 4-Sets with Python.ipynb  README.md
Clown_Nose_Filter/: index.html  main.js  style.css
InfiniWordle/: initial_generation.py  main.py  (+1 more)
MATEROV-EuropeanGreenCrabDetection/green_crab_ws/src/green_crab_detector/: bash_commands.txt  package.xml  setup.py
MATEROV-EuropeanGreenCrabDetection/green_crab_ws/src/green_crab_detector/green_crab_detector/: detector_node.py
MATEROV-EuropeanGreenCrabDetection/green_crab_ws/src/green_crab_detector/model/: test_load_model.py
(+78 files in other folders)
